@@ -6,6 +6,7 @@ NEWS
 - 1.4.23 -
   * Added some extra warning options in cmake and fix the resulting warnings (unused/static functions)
   * New lighttpd man page (moved it to section 8) (fixes #1875)
+  * Create rrd file for empty rrdfile in mod_rrdtool (#1788)
 
 - 1.4.22 - 2009-03-07
   * Fix wrong lua type for CACHE_MISS/CACHE_HIT in mod_cml (fixes #533)
